--- a/src/app/courses/[slug]/page.module.scss
+++ b/src/app/courses/[slug]/page.module.scss
@@ -27,14 +27,7 @@
   }
 }
 
-.heroContentWrapper {
-  width: 100%;
-  max-width: 1240px; // Standard width inside the box
-  margin-inline: auto;
-  padding-inline: 60px;
-
-  @include below(md) { padding-inline: 24px; }
-}
+// heroContentWrapper removed
 
 .heroGrid {
   display: grid;
