--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -20,27 +20,21 @@
   background: #150033;
   padding-top: 100px;
   padding-bottom: 280px; 
-  margin-top: 24px;
-  margin-inline: 200px; // Match 200px margin alignment
-  border-radius: 40px 40px 80px 80px;
+  margin-top: 0;
+  width: 100%;
+  margin-inline: 0;
+  border-radius: 0 0 80px 80px;
   overflow: hidden;
 
-  @include below(xl) { margin-inline: 40px; }
   @include below(md) {
-    margin-top: calc(#{$header-height} + 16px);
-    margin-inline: 16px;
-    border-radius: 20px 20px 40px 40px;
+    margin-top: 0;
+    border-radius: 0 0 40px 40px;
     padding-top: 60px;
     padding-bottom: 100px;
   }
 }
 
-.heroContentWrapper {
-  width: 100%;
-  max-width: 1200px;
-  margin-inline: auto;
-  padding-inline: 40px;
-}
+// heroContentWrapper removed
 
 .heroContent {
   display: flex;
