--- a/src/app/services/page.module.scss
+++ b/src/app/services/page.module.scss
@@ -17,26 +17,20 @@
   background: $purple-900;
   padding-top: 64px;
   padding-bottom: 280px; 
-  margin-top: 24px;
-  margin-inline: 200px; // Match 200px margin
-  border-radius: 40px 40px 80px 80px;
+  margin-top: 0;
+  width: 100%;
+  margin-inline: 0;
+  border-radius: 0 0 80px 80px;
   overflow: hidden;
   text-align: center;
 
-  @include below(xl) { margin-inline: 40px; }
   @include below(md) {
-    margin-inline: 16px;
-    border-radius: 20px 20px 40px 40px;
+    border-radius: 0 0 40px 40px;
     padding-bottom: 100px;
   }
 }
 
-.heroContentWrapper {
-  width: 100%;
-  max-width: 1200px;
-  margin-inline: auto;
-  padding-inline: 40px;
-}
+// heroContentWrapper removed
 
 .heroContent {
   max-width: 800px;
